Swagger actualités + url Job Offers
